--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,16 +117,29 @@
         <th>SKU</th>
         <th>Nombre</th>
         <th>Subtotal</th>
+        <th>Fee for Service</th>
+        <th>Recuperación del Costo</th>
+        <th>Fee Logístico</th>
+        <th>Publicidad</th>
+        <th>Factoraje</th>
+        <th>Pronto Pago</th>
       </tr>
     </thead>
     <tbody>
       <% records.forEach(record => { %>
         <tr>
-          <td><%= record.move_id %></td>
-          <td><%= record.partner_id %></td>
-          <td><%= record.SKU %></td>
-          <td><%= record.name %></td>
-          <td><%= record.price_subtotal %></td>
+            <td><%= record.move_id %></td>
+            <td><%= record.partner_id %></td>
+            <td><%= record.SKU %></td>
+            <td><%= record.name %></td>
+            <td><%= record.price_subtotal.toFixed(2) %></td>
+            <td><%= record.feeForServiceAmount ? record.feeForServiceAmount.toFixed(2) : '0.00' %></td>
+            <td><%= record.recuperacionCostoAmount ? record.recuperacionCostoAmount.toFixed(2) : '0.00' %></td>
+            <td><%= record.feeLogisticoAmount ? record.feeLogisticoAmount.toFixed(2) : '0.00' %></td>
+            <td><%= record.publicidadAmount ? record.publicidadAmount.toFixed(2) : '0.00' %></td>
+            <td><%= record.factorajeAmount ? record.factorajeAmount.toFixed(2) : '0.00' %></td>
+            <td><%= record.prontoPagoAmount ? record.prontoPagoAmount.toFixed(2) : '0.00' %></td>
+    
           <td style="display: none;"><%= record.fecha %></td> 
         </tr>
       <% }) %>
