--- a/views/index.ejs
+++ b/views/index.ejs
@@ -269,7 +269,7 @@ var totalProntoPago = 0;
   document.getElementById('totalPublicidad').textContent = new Intl.NumberFormat('es-MX').format(totalPublicidad.toFixed(2));
   document.getElementById('totalFactoraje').textContent = new Intl.NumberFormat('es-MX').format(totalFactoraje.toFixed(2));
   document.getElementById('totalProntoPago').textContent = new Intl.NumberFormat('es-MX').format(totalProntoPago.toFixed(2));
-  document.getElementById('totalVentaNeta').textContent = new Intl.NumberFormat('es-MX').format(totalVentaBruta.toFixed(2));
+  document.getElementById('totalVentaNeta').textContent = new Intl.NumberFormat('es-MX').format(totalVentaNeta.toFixed(2));
 
 
 }
