--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,15 +7,13 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #182857;
       margin: 0;
       padding: 20px;
     }
-    #totalsRow{
-        border: 0px !important;
-    }
+
     h1 {
-      color: #333;
+      color: #ffffff;
       text-align: center;
       margin-bottom: 20px;
     }
@@ -30,7 +28,7 @@
       flex-wrap: wrap;
     }
     .filter-group > div {
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
     label {
       font-weight: bold;
@@ -58,30 +56,32 @@
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     th, td {
-      border: 1px solid #ddd;
       padding: 10px;
       text-align: left;
+      border-bottom: 1px solid white;
     }
     th {
-      background-color: #f2f2f2;
-      color: #333;
+      background-color: #182857;
+      color: #ffffff;
     }
     tr:nth-child(even) {
       background-color: #f9f9f9;
     }
     #totalsRow {
       font-weight: bold;
-      background-color: #e7e7e7; /* Color de fondo para distinguir la fila de totales */
-      color: #333;
+      background-color: #182857; /* Color de fondo para distinguir la fila de totales */
+      color: #ffffff;
+      border-bottom: 1px solid white;
       border: 0px;
     }td#Blank {
-    background-color: #f4f4f4;
+    background-color: #182857;
     border: 0px;
 }
     #totalResults {
       font-size: 18px;
       font-weight: bold;
-      color: #333;
+      color: #ffffff;
+      border-bottom: 1px solid white;
       margin-top: 10px;
     }
     /* Estilos adicionales para hacer responsive el grupo de filtros */
@@ -94,33 +94,56 @@
         margin-bottom: 10px;
       }
     }
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+
+    .header-logo {
+      flex: 0 0 auto; /* No permitir que el logo crezca o se encoja */
+      margin-right: 15px; /* Ajustar según sea necesario */
+      width: 5%;
+    }
+
+    .header-title {
+      flex-grow: 1;
+      color: #ffffff;
+      margin: 0; /* Eliminar el margen por defecto del h1 */
+    }
+
   </style>
 </head>
 <body>
-  <h1>Reporte de Descuentos</h1>
+    <div class="header">
+        <img src="../public/img/LOGO_BCL.png" alt="Logo" class="header-logo">
+        <h1 class="header-title">Reporte de Condiciones Comerciales</h1>
+      </div>
   
   <div class="filter-group">
+    <div>
+        <label for="clientFilter"><i class="fas fa-users"></i> Cliente:</label>
+        <select id="clientFilter" class="custom-select" onchange="filterFunction()">
+          <option value="">Todos los clientes</option>
+          <% 
+            let uniqueClients = [];
+            records.forEach(record => {
+              if (!uniqueClients.includes(record.partner_id)) {
+                uniqueClients.push(record.partner_id);
+              }
+            });
+            uniqueClients.sort().forEach(client => { 
+          %>
+            <option value="<%= client %>"><%= client %></option>
+          <% }); %>
+        </select>
+      </div>
     <div>
       <label for="searchInput"><i class="fas fa-search"></i> Buscar:</label>
       <input type="text" id="searchInput" onkeyup="filterFunction()" placeholder="Buscar por nombre...">
     </div>
-    <div>
-      <label for="clientFilter"><i class="fas fa-users"></i> Cliente:</label>
-      <select id="clientFilter" class="custom-select" onchange="filterFunction()">
-        <option value="">Todos los clientes</option>
-        <% 
-          let uniqueClients = [];
-          records.forEach(record => {
-            if (!uniqueClients.includes(record.partner_id)) {
-              uniqueClients.push(record.partner_id);
-            }
-          });
-          uniqueClients.sort().forEach(client => { 
-        %>
-          <option value="<%= client %>"><%= client %></option>
-        <% }); %>
-      </select>
-    </div>
+
     <div>
       <label for="startDate"><i class="fas fa-calendar-alt"></i> Fecha Inicio:</label>
       <input type="date" id="startDate" onchange="filterFunction()" placeholder="Fecha inicio...">
