--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,117 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Reporte de Facturas</title>
+  <link rel="stylesheet" href="../public/css/index.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #182857;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #ffffff;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .filter-group {
-      background-color: #fff;
-      padding: 15px;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    .filter-group > div {
-      margin-bottom: 5px;
-    }
-    label {
-      font-weight: bold;
-      margin-right: 10px;
-    }
-    input[type="text"], input[type="date"], select {
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 16px;
-    }
-    select.custom-select {
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-      padding-right: 30px;
-      background: url('https://cdn-icons-png.flaticon.com/512/60/60995.png') no-repeat right 10px center;
-      background-size: 20px;
-      cursor: pointer;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #fff;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-      border-bottom: 1px solid white;
-    }
-    th {
-      background-color: #182857;
-      color: #ffffff;
-    }
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-    #totalsRow {
-      font-weight: bold;
-      background-color: #182857; /* Color de fondo para distinguir la fila de totales */
-      color: #ffffff;
-      border-bottom: 1px solid white;
-      border: 0px;
-    }td#Blank {
-    background-color: #182857;
-    border: 0px;
-}
-    #totalResults {
-      font-size: 18px;
-      font-weight: bold;
-      color: #ffffff;
-      border-bottom: 1px solid white;
-      margin-top: 10px;
-    }
-    /* Estilos adicionales para hacer responsive el grupo de filtros */
-    @media (max-width: 768px) {
-      .filter-group {
-        flex-direction: column;
-      }
-      .filter-group > div {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-    }
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 20px;
-    }
-
-    .header-logo {
-      flex: 0 0 auto; /* No permitir que el logo crezca o se encoja */
-      margin-right: 15px; /* Ajustar según sea necesario */
-      width: 5%;
-    }
-
-    .header-title {
-      flex-grow: 1;
-      color: #ffffff;
-      margin: 0; /* Eliminar el margen por defecto del h1 */
-    }
-
-  </style>
 </head>
 <body>
     <div class="header">
@@ -140,6 +31,7 @@
         </select>
       </div>
     <div>
+    
       <label for="searchInput"><i class="fas fa-search"></i> Buscar:</label>
       <input type="text" id="searchInput" onkeyup="filterFunction()" placeholder="Buscar por nombre...">
     </div>
@@ -177,7 +69,18 @@
   <table id="recordsTable">
     <thead>
         <tr id="totalsRow">
-            <td id="Blank"></td>
+            <td id="Blank">
+              <form id="formDescarga" action="/descargar" method="get">
+              <input type="hidden" name="cliente" id="filtroCliente">
+              <input type="hidden" name="fechaInicio" id="filtroFechaInicio">
+              <input type="hidden" name="fechaFin" id="filtroFechaFin">
+              <input type="hidden" name="busqueda" id="filtroBusqueda">
+              <button type="submit" class="button">
+                <span class="button__text">Descargar</span>
+                <span class="button__icon"><svg class="svg" data-name="Layer 2" id="bdd05811-e15d-428c-bb53-8661459f9307" viewBox="0 0 35 35" xmlns="http://www.w3.org/2000/svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+              </button>
+              </form>
+            </td>
             <td id="Blank"></td>
             <td id="Blank"></td>
             <td id="Blank"></td>
@@ -293,7 +196,11 @@ var totalProntoPago = 0;
   document.getElementById('totalFactoraje').textContent = new Intl.NumberFormat('es-MX').format(totalFactoraje.toFixed(2));
   document.getElementById('totalProntoPago').textContent = new Intl.NumberFormat('es-MX').format(totalProntoPago.toFixed(2));
   document.getElementById('totalVentaNeta').textContent = new Intl.NumberFormat('es-MX').format(totalVentaNeta.toFixed(2));
-
+  // Actualizar los campos ocultos con los valores de los filtros
+  document.getElementById('filtroCliente').value = document.getElementById('clientFilter').value;
+  document.getElementById('filtroFechaInicio').value = document.getElementById('startDate').value;
+  document.getElementById('filtroFechaFin').value = document.getElementById('endDate').value;
+  document.getElementById('filtroBusqueda').value = document.getElementById('searchInput').value;
 
 }
   </script>
