--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,17 @@
     <div class="header">
         <img src="../public/img/LOGO_BCL.png" alt="Logo" class="header-logo">
         <h1 class="header-title">Reporte de Condiciones Comerciales</h1>
+        <a href="/formulario" class="cssbuttons-io-button" role="button">
+          ir al formulario
+          <div class="icon">
+            <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 0h24v24H0z" fill="none"></path>
+              <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path>
+            </svg>
+          </div>
+        </a>
+        
+        
       </div>
   
   <div class="filter-group">
@@ -31,7 +42,6 @@
         </select>
       </div>
     <div>
-    
       <label for="searchInput"><i class="fas fa-search"></i> Buscar:</label>
       <input type="text" id="searchInput" onkeyup="filterFunction()" placeholder="Buscar por nombre...">
     </div>
@@ -105,7 +115,7 @@
         <th>Fee for Service</th>
         <th>Recuperación del Costo</th>
         <th>Fee Logístico</th>
-        <th>Publicidad</th>
+        <th>Inversion Variable</th>
         <th>Factoraje</th>
         <th>Pronto Pago</th>
         <th>Venta Neta</th>
