--- a/public/css/index.css
+++ b/public/css/index.css
@@ -147,7 +147,7 @@ body {
   
   .button .svg {    
     width: 20px;
-    fill: var(--main-color);
+    fill: #ffffff;
   }
   
   .button:hover {
@@ -166,3 +166,56 @@ body {
   .button:active {
     box-shadow: 0px 0px var(--main-color);
   }
+  .cssbuttons-io-button {
+    background: #F2441D;
+    color: white;
+    font-family: inherit;
+    padding-left: 1.2em;
+    font-weight: 500;
+    border-radius: 0.9em;
+    border: none;
+    letter-spacing: 0.05em;
+    display: flex;
+    align-items: center;
+    box-shadow: inset 0 0 1.6em -0.6em #91301a;
+    overflow: hidden;
+    position: relative;
+    height: 2.7em;
+    padding-right: 3.3em;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  
+  .cssbuttons-io-button .icon {
+    background: white;
+    margin-left: 1em;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2em;
+    width: 2.2em;
+    border-radius: 0.7em;
+    box-shadow: 0.1em 0.1em 0.6em 0.2em #91301a;
+    right: 0.3em;
+    transition: all 0.3s;
+  }
+  
+  .cssbuttons-io-button:hover .icon {
+    width: calc(100% - 0.6em);
+  }
+  
+  .cssbuttons-io-button .icon svg {
+    width: 1.1em;
+    transition: transform 0.3s;
+    color: #F2441D;
+  }
+  
+  .cssbuttons-io-button:hover .icon svg {
+    transform: translateX(0.1em);
+  }
+  
+  .cssbuttons-io-button:active .icon {
+    transform: scale(0.95);
+  }
+  
