--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,19 +94,31 @@
         <td id="Blank"></td>
         <td id="Blank"></td>
         <td id="Blank"></td>
-        <!-- Cálculos de porcentajes -->
-        <!-- Nota: Asegúrate de que totalVentaBruta no sea cero para evitar la división por cero -->
-        <td id="totalVentaBruta">100%</td> <!-- La venta bruta es el total, por lo que siempre es 100% -->
-        <td id="totalFeeForService"><%= totalVentaBruta ? ((totalFeeForService / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-        <td id="totalRecuperacionCosto"><%= totalVentaBruta ? ((totalRecuperacionCosto / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-        <td id="totalFeeLogistico"><%= totalVentaBruta ? ((totalFeeLogistico / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-        <td id="totalPublicidad"><%= totalVentaBruta ? ((totalPublicidad / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-        <td id="totalFactoraje"><%= totalVentaBruta ? ((totalFactoraje / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-        <td id="totalProntoPago"><%= totalVentaBruta ? ((totalProntoPago / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-        <td id="totalVentaNeta"><%= totalVentaBruta ? ((totalVentaNeta / totalVentaBruta) * 100).toFixed(2) + '%' : '0%' %></td>
-    </tr>
+
+        <!-- Totales por columna, calculados en el backend -->
+        <td id="totalVentaBruta2">100%</td> <!-- La venta bruta es siempre el 100% -->
+        <td id="totalFeeForService2"><%= ((totalFeeForService / totalVentaBruta) * 100).toFixed(2) %> %</td>
+        <td id="totalRecuperacionCosto2"><%= ((totalRecuperacionCosto / totalVentaBruta) * 100).toFixed(2) %> %</td>
+        <td id="totalFeeLogistico2"><%= ((totalFeeLogistico / totalVentaBruta) * 100).toFixed(2) %> %</td>
+        <td id="totalPublicidad2"><%= ((totalPublicidad / totalVentaBruta) * 100).toFixed(2) %> %</td>
+        <td id="totalFactoraje2"><%= ((totalFactoraje / totalVentaBruta) * 100).toFixed(2) %> %</td>
+        <td id="totalProntoPago2"><%= ((totalProntoPago / totalVentaBruta) * 100).toFixed(2) %> %</td>
+        <td id="totalVentaNeta2"><%= ((totalVentaNeta / totalVentaBruta) * 100).toFixed(2) %> %</td>
+    
+      </tr>
         <tr id="totalsRow">
-            <td id="Blank"></td>
+            <td id="Blank">
+              <form id="formDescarga" action="/descargar" method="get">
+              <input type="hidden" name="cliente" id="filtroCliente">
+              <input type="hidden" name="fechaInicio" id="filtroFechaInicio">
+              <input type="hidden" name="fechaFin" id="filtroFechaFin">
+              <input type="hidden" name="busqueda" id="filtroBusqueda">
+              <button type="submit" class="button">
+                <span class="button__text">Descargar</span>
+                <span class="button__icon"><svg class="svg" data-name="Layer 2" id="bdd05811-e15d-428c-bb53-8661459f9307" viewBox="0 0 35 35" xmlns="http://www.w3.org/2000/svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+              </button>
+              </form>
+            </td>
             <td id="Blank"></td>
             <td id="Blank"></td>
             <td id="Blank"></td>
@@ -227,7 +239,22 @@ var totalProntoPago = 0;
   document.getElementById('filtroFechaInicio').value = document.getElementById('startDate').value;
   document.getElementById('filtroFechaFin').value = document.getElementById('endDate').value;
   document.getElementById('filtroBusqueda').value = document.getElementById('searchInput').value;
-
+  var porcentajeFeeForService = totalVentaBruta ? (totalFeeForService / totalVentaBruta * 100) : 0;
+  var porcentajeRecuperacionCosto = totalVentaBruta ? (totalRecuperacionCosto / totalVentaBruta * 100) : 0;
+  var porcentajeFeeLogistico = totalVentaBruta ? (totalFeeLogistico / totalVentaBruta * 100) : 0;
+  var porcentajePublicidad = totalVentaBruta ? (totalPublicidad / totalVentaBruta * 100) : 0;
+  var porcentajeFactoraje = totalVentaBruta ? (totalFactoraje / totalVentaBruta * 100) : 0;
+  var porcentajeProntoPago = totalVentaBruta ? (totalProntoPago / totalVentaBruta * 100) : 0;
+  var porcentajeProntoPago = totalVentaBruta ? (totalVentaNeta / totalVentaBruta * 100) : 0;
+  
+  document.getElementById('totalVentaBruta2').textContent = 100 + "%";
+  document.getElementById('totalFeeForService2').textContent = porcentajeFeeForService.toFixed(2) + "%";
+  document.getElementById('totalRecuperacionCosto2').textContent = porcentajeRecuperacionCosto.toFixed(2) + "%";
+  document.getElementById('totalFeeLogistico2').textContent = porcentajeFeeLogistico.toFixed(2) + "%";
+  document.getElementById('totalPublicidad2').textContent = porcentajePublicidad.toFixed(2) + "%";
+  document.getElementById('totalFactoraje2').textContent = porcentajeFactoraje.toFixed(2) + "%";
+  document.getElementById('totalProntoPago2').textContent =porcentajeProntoPago.toFixed(2) + "%";
+  document.getElementById('totalVentaNeta2').textContent = porcentajeVentaNeta.toFixed(2) + "%";
 }
   </script>
 </body>
