commit de prueba

--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -48,11 +48,15 @@
             <label for="discountReason">Descuentos:</label>
             <select id="discountReason" name="discountReason" required>
                 <option value="Promociones">Promociones</option>
-                <option value="EDLP">EDLP</option>
-                <option value="Eventos cliente">Eventos cliente</option>
-                <option value="MKT">MKT</option>
+                <option value="Rentas">Rentas</option>
                 <option value="Negociaciones Sell in">Negociaciones Sell in</option>
-                <option value="Activacion FDV">Activacion FDV</option>
+                <option value="Eventos cliente">Eventos cliente</option>
+                <option value="Actividades FDV">Actividades FDV</option>
+                <option value="Actividades en PDV">Actividades en PDV</option>
+                <option value="EDLP">EDLP</option>
+                <option value="MKT">MKT</option>
+                <option value="Gel Prevent">Gel Prevent</option>
+                <option value="We Shine">We Shine</option>
                 <option value="Otros apoyos">Otros apoyos</option>
             </select>
 
