--- a/views/index.ejs
+++ b/views/index.ejs
@@ -103,7 +103,7 @@
         <th>Fee for Service</th>
         <th>Recuperación del Costo</th>
         <th>Fee Logístico</th>
-        <th>Inversión Variable</th>
+        <th>Descuentos Adicionales</th>
         <th>Factoraje</th>
         <th>Pronto Pago</th>
         <th>Total Descuentos</th>
